--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "styles.css"
   ],
   "scripts": {
+    "build": "npm run clean && nwb build-react-component --no-vendor",
+    "clean": "nwb clean-module && nwb clean-demo",
+    "start": "nwb serve-react-demo",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "test": "nwb test-react",
+    "test:coverage": "nwb test-react --coverage",
+    "test:watch": "nwb test-react --server",
     "lint": "eslint --fix src/**/*.js"
   },
   "dependencies": {
@@ -37,6 +44,9 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
+    "node-sass": "^4.14.1",
+    "nwb": "^0.15.6",
+    "nwb-sass": "^0.10.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
